--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Furniture.test</title>
+    <include src="./partials/meta.html" />
 </head>
 <body>
     <include src="./partials/header.html" />
